h1 wrap fix

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -57,9 +57,9 @@
                 text-transform: uppercase;
                 position: relative;
                 display: inline-block;
-                width: 100%;
-                max-width: 50ch;
-
+                max-width: 100%;
+                // max-width: 40ch;
+                white-space: nowrap;
                 @media screen and (min-width: 480px) {
                     font-size: 2rem;
                 }
@@ -102,7 +102,7 @@
                 font-size: 1rem;
             }
             @media screen and (min-width: 801px) {
-                font-size: 1.4rem;
+                font-size: 1.2rem;
                 max-width: 60ch;
             }
             a {
